# aixeu-ai

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  LICENSE  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml  test_connectivity.py
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  init_db.py  install.bat  install_deps.sh  pyproject.toml  runtests.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 000_create_users_table.py  001_phase_1_storage.py  002_phase_2_chat.py  003_phase_3_documents.py  004_phase_4_document_intelligence.py  005_phase_5_knowledge_base.py  006_phase_6_tasks.py  007_add_task_label_unique_constraint.py  008_add_search_models.py  009_add_agent_models.py  010_add_settings_models.py  011_add_fk_indexes.py  71e37dd2f7b3_add_refresh_tokens_table.py
backend/app/: database.py  main.py  worker.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limiter.py  security.py  tasks.py
backend/app/models/: __init__.py  agent.py  base.py  conversation.py  document.py  file.py  knowledge.py  refresh_token.py  search.py  settings.py  task.py  user.py
backend/app/schemas/: __init__.py  agent.py  auth.py  chat.py  dashboard.py  document.py  knowledge.py  search.py  (+4 more)
backend/tests/: conftest.py  test_agent_internals.py  test_agents.py  test_auth.py  test_chat.py  test_chat_e2e.py  test_dashboard.py  test_document_processing.py  test_embeddings_pipeline.py  test_health.py  test_knowledge.py  test_rate_limiter.py  test_settings.py  test_storage.py  test_tasks.py
(+151 files in other folders)
